move mkdocs.yml to root folder

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: PyFPDF
 site_url: https://github.com/reingart/pyfpdf
 repo_url: https://github.com/reingart/pyfpdf.git
 site_description: Simple PDF generation for Python (FPDF PHP port)
-docs_dir: .
+docs_dir: docs
 site_dir: html
 markdown_extensions: [toc]
 use_directory_urls: false
