fix Header.mf, Web2Py.md, WriteHTML.md, define pages order and naming

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,3 +7,65 @@ site_dir: html
 markdown_extensions: [toc,fenced_code]
 use_directory_urls: false
 theme: readthedocs
+pages:
+- [index.md, "Project Home"]
+- [ProjectHome.md, "Project Home"]
+- [ReferenceManual.md, "Reference manual"]
+- [Tutorial.md, "Tutorial"]
+- [FAQ.md, "FAQ (Frequently asked questions)"]
+- [Python3.md, "Python 3"]
+- [Templates.md, "Templates"]
+- [Unicode.md, "Unicode"]
+- [Web2Py.md, "Web2Py framework"]
+- [Testing.md, "Testing"]
+- ["reference/AcceptPageBreak.md", "Reference manual", "AcceptPageBreak"]
+- ["reference/AddFont.md", "Reference manual", "AddFont"]
+- ["reference/AddLink.md", "Reference manual", "AddLink"]
+- ["reference/AddPage.md", "Reference manual", "AddPage"]
+- ["reference/AliasNbPages.md", "Reference manual", "AliasNbPages"]
+- ["reference/Cell.md", "Reference manual", "Cell"]
+- ["reference/Close.md", "Reference manual", "Close"]
+- ["reference/DashedLine.md", "Reference manual", "DashedLine"]
+- ["reference/Error.md", "Reference manual", "Error"]
+- ["reference/FPDF.md", "Reference manual", "FPDF"]
+- ["reference/Footer.md", "Reference manual", "Footer"]
+- ["reference/GetStringWidth.md", "Reference manual", "GetStringWidth"]
+- ["reference/GetX.md", "Reference manual", "GetX"]
+- ["reference/GetY.md", "Reference manual", "GetY"]
+- ["reference/Header.md", "Reference manual", "Header"]
+- ["reference/Image.md", "Reference manual", "Image"]
+- ["reference/Line.md", "Reference manual", "Line"]
+- ["reference/Link.md", "Reference manual", "Link"]
+- ["reference/Ln.md", "Reference manual", "Ln"]
+- ["reference/MultiCell.md", "Reference manual", "MultiCell"]
+- ["reference/Open.md", "Reference manual", "Open"]
+- ["reference/Output.md", "Reference manual", "Output"]
+- ["reference/PageNo.md", "Reference manual", "PageNo"]
+- ["reference/Rect.md", "Reference manual", "Rect"]
+- ["reference/SetAuthor.md", "Reference manual", "SetAuthor"]
+- ["reference/SetAutoPageBreak.md", "Reference manual", "SetAutoPageBreak"]
+- ["reference/SetCompression.md", "Reference manual", "SetCompression"]
+- ["reference/SetCreator.md", "Reference manual", "SetCreator"]
+- ["reference/SetDisplayMode.md", "Reference manual", "SetDisplayMode"]
+- ["reference/SetDrawColor.md", "Reference manual", "SetDrawColor"]
+- ["reference/SetFillColor.md", "Reference manual", "SetFillColor"]
+- ["reference/SetFont.md", "Reference manual", "SetFont"]
+- ["reference/SetFontSize.md", "Reference manual", "SetFontSize"]
+- ["reference/SetKeywords.md", "Reference manual", "SetKeywords"]
+- ["reference/SetLeftMargin.md", "Reference manual", "SetLeftMargin"]
+- ["reference/SetLineWidth.md", "Reference manual", "SetLineWidth"]
+- ["reference/SetLink.md", "Reference manual", "SetLink"]
+- ["reference/SetMargins.md", "Reference manual", "SetMargins"]
+- ["reference/SetRightMargin.md", "Reference manual", "SetRightMargin"]
+- ["reference/SetStretching.md", "Reference manual", "SetStretching"]
+- ["reference/SetSubject.md", "Reference manual", "SetSubject"]
+- ["reference/SetTextColor.md", "Reference manual", "SetTextColor"]
+- ["reference/SetTitle.md", "Reference manual", "SetTitle"]
+- ["reference/SetTopMargin.md", "Reference manual", "SetTopMargin"]
+- ["reference/SetX.md", "Reference manual", "SetX"]
+- ["reference/SetXY.md", "Reference manual", "SetXY"]
+- ["reference/SetY.md", "Reference manual", "SetY"]
+- ["reference/Text.md", "Reference manual", "Text"]
+- ["reference/Write.md", "Reference manual", "Write"]
+- ["reference/WriteHTML.md", "Reference manual", "WriteHTML"]
+
